unpackaged/main/default/objects/Criteria_to_Public_Group_Mapping__mdt/Criteria_to_Public_Group_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Stores mappings between User Persona and PCA Assigned Home Campus to corresponding public groups for dynamic user assignment during User record creation.</description>
    <label>Criteria to Public Group Mapping</label>
    <pluralLabel>Criteria to Public Group Mappings</pluralLabel>
</CustomObject>