unpackaged/main/default/objects/Criteria_to_Public_Group_Mapping__mdt/fields/Divison__c.field-meta.xml
<CustomField>
    <fullName>Divison__c</fullName>
    <description>Divison field values in user object will be mapped in this fields for Public Group Mappings</description>
    <label>Divison</label>
    <length>100</length>
    <type>Text</type>
</CustomField>