unpackaged/main/default/objects/Criteria_to_Public_Group_Mapping__mdt/fields/Divison_Group__c.field-meta.xml
<CustomField>
    <fullName>Divison_Group__c</fullName>
    <label>Divison Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kendall_Campus_Public_Group</fullName>
                <default>true</default>
                <label>Kendall_Campus_Public_Group</label>
            </value>
            <value>
                <fullName>Wolfson_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>West_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>Padron_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>North_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>Meek_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>Medical_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>Homestead_Campus_Public_Group</fullName>
            </value>
            <value>
                <fullName>Hialeah_Campus_Public_Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>