unpackaged/main/default/objects/Criteria_to_Public_Group_Mapping__mdt/fields/PCA_Group__c.field-meta.xml
<CustomField>
    <fullName>PCA_Group__c</fullName>
    <label>PCA Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCA_Kendall</fullName>
                <default>true</default>
                <label>PCA_Kendall</label>
            </value>
            <value>
                <fullName>PCA_Wolfson</fullName>
            </value>
            <value>
                <fullName>PCA_West</fullName>
            </value>
            <value>
                <fullName>PCA_Padron</fullName>
            </value>
            <value>
                <fullName>PCA_North</fullName>
            </value>
            <value>
                <fullName>PCA_Meek</fullName>
            </value>
            <value>
                <fullName>PCA_Medical</fullName>
            </value>
            <value>
                <fullName>PCA_Homestead</fullName>
            </value>
            <value>
                <fullName>PCA_Hialeah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>